--- a/upload/src/main/resources/application.properties
+++ b/upload/src/main/resources/application.properties
@@ -1,1 +1,14 @@
+# HTTP \uC694\uCCAD \uBA54\uC2DC\uC9C0 \uD655\uC778
+#logging.level.org.apache.coyote.http11=debug
+
+# multipart \uCC98\uB9AC (default value = true)
+spring.servlet.multipart.enabled=true
+
+# \uBA40\uD2F0\uD30C\uD2B8 \uC0AC\uC6A9 \uC635\uC158
+# \uC5C5\uB85C\uB4DC \uC0AC\uC774\uC988 \uC81C\uD55C
+spring.servlet.multipart.max-file-size=1MB
+spring.servlet.multipart.max-request-size=10MB
+
+# \uD30C\uC77C \uC5C5\uB85C\uB4DC \uACBD\uB85C \uC124\uC815
+file.dir=C:/Users/82104/file/
 
